# Fryte-Compiler

./: CMakeLists.txt  LICENSE  README.md  doIt.txt  file.txt  main.cpp
include/: BytecodeIO.h  Class.h  Compiler.h  ConsoleMenu.h  InstructionGenerator.h  Parser.h  VMTypes.h  VirtualStack.h
src/: BytecodeIO.cpp  Class.cpp  Compiler.cpp  ConsoleMenu.cpp  InstructionGenerator.cpp  Parser.cpp  VirtualStack.cpp
